--- a/client/src/assets/scss/scssComponents/topLinks.scss
+++ b/client/src/assets/scss/scssComponents/topLinks.scss
@@ -1,8 +1,12 @@
+
 .top-links {
   color:rgb(73, 30, 10);
+  background-color: rgb(120, 120, 120);
   display: flex;
   justify-content: space-between;
-  padding: 1rem
+  padding: 1rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 .top-links-right {
