--- a/client/src/assets/scss/scssComponents/weather.scss
+++ b/client/src/assets/scss/scssComponents/weather.scss
@@ -2,10 +2,9 @@
 .weather-block {
   display: flex;
   justify-content: left;
+  align-items: flex-end;
   max-width: 75%;
   margin: 1rem auto;
-}
-
-.weather-info {
-  padding: 0 1rem
+  padding-top: 5rem;
+  color: rgb(120, 120, 120)
 }
