even more styling

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -50,8 +50,9 @@ a:hover {
   text-decoration: line-through;
 }
 
-.registration-form {
+.registration-form,
+.sign-in-form {
   max-width: 40%;
-  margin: 0 auto;
+  margin: 4rem auto;
 }
 
