--- a/client/src/assets/scss/scssComponents/topLinks.scss
+++ b/client/src/assets/scss/scssComponents/topLinks.scss
@@ -1,6 +1,7 @@
 
 .top-links {
   color:rgb(73, 30, 10);
+  font-weight: bold;
   background-color: rgb(120, 120, 120);
   display: flex;
   justify-content: space-between;
