--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -39,7 +39,7 @@ a:hover {
   min-width: 300px;
   margin: 0 auto;
   background-color: $app-background;
-  min-height: 800px ;
+  height: 800px ;
 }
 
 .page-container {
