--- a/client/src/assets/scss/stylesheets/colors.scss
+++ b/client/src/assets/scss/stylesheets/colors.scss
@@ -1,5 +1,5 @@
-$app-background: rgb(228, 228, 228);
-$light-gray: rgb(160, 160, 160);
-$medium-gray: rgb(120, 120, 120);
-$dark-gray: rgb(43, 43, 43);
-$font-color: rgb(73, 30, 10);
+$medium-beige: #e3b463;
+$light-beige: #f9e3b1;
+$medium-gray: #5a5354;
+$dark-gray: #040404;
+$red-brown: #3f1305;
