--- a/client/src/assets/scss/stylesheets/topLinks.scss
+++ b/client/src/assets/scss/stylesheets/topLinks.scss
@@ -1,9 +1,9 @@
 @import "./colors.scss";
 
 .top-links {
-  color:$font-color;
+  color:$light-beige;
   font-weight: bold;
-  background-color: $medium-gray;
+  background-color: $red-brown;
   display: flex;
   justify-content: space-between;
   padding: 1rem;
