--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -6,15 +6,14 @@
   justify-content: center;
   max-height: 500px;
   overflow-y: scroll;
-
-
 }
 
 .project-tile-container {
   margin: 1em;
   padding: 1em;
   border-radius: 0.5rem;
-  background-color: $medium-gray;
+  background-color: $red-brown;
+  color: $light-beige;
 }
 
 .project-name {
