--- a/client/src/assets/scss/stylesheets/colors.scss
+++ b/client/src/assets/scss/stylesheets/colors.scss
@@ -1,5 +1,6 @@
-$medium-beige: #e3b463;
+$medium-beige: rgb(227, 180, 99);
 $light-beige: #f9e3b1;
-$medium-gray: #5a5354;
-$dark-gray: #040404;
-$red-brown: #3f1305;
+$medium-gray: #746c60;
+$dark-gray: #1d1d1d;
+$red-brown: #371d02;
+$transparent-background:rgba(249, 227, 177, 0.5);
