--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -23,10 +23,10 @@ body {
 }
 
 a:link {
-  color:$light-beige;
+  color:$medium-beige;
 }
 a:visited {
-  color: $light-beige;
+  color: $medium-beige;
 }
 a:hover {
   color: black
@@ -38,11 +38,25 @@ a:hover {
   max-width: 75%;
   min-width: 300px;
   margin: 0 auto;
-  background-color: $light-beige;
+  margin-bottom: rem;
+  background-image: url('https://i.imgur.com/bwDuFOw.jpg');
+  background-size: cover;
   height: 800px ;
-}
+  box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 50px;
+
+} 
 
 .home-page-container {
+  display: inline-block;
+  font-weight: bolder;
+  text-align: center;
+  padding: 1rem;
+  background-color: $transparent-background;
+  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  border-bottom-right-radius: 0.5rem;
+}
+
+.auth-page-container {
   text-align: center;
   padding: 1rem;
 }
@@ -51,5 +65,8 @@ a:hover {
 .sign-in-form {
   max-width: 40%;
   margin: 4rem auto;
+  background-color: $transparent-background;
+  border-radius: 0.5rem;
+
 }
 
