show project page is complete front and back, and active

--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -33,3 +33,12 @@
   margin: 0.2rem;
   padding: 0.1rem
 }
+
+.project-show {
+  margin: 1rem auto;
+  min-width: 90%;
+  max-width: 90%;
+  min-height: 82%;
+  max-height: 82%;
+  
+}
