--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -15,7 +15,6 @@
   background-color: $transparent-background;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   color: $red-brown;
-
 }
 
 .project-name {
@@ -41,4 +40,26 @@
   min-height: 82%;
   max-height: 82%;
   
+}
+
+.back-button {
+  background-color: $medium-beige;
+  border: 3px solid $red-brown;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 50px;
+  position: absolute;
+  margin: -5rem 5rem;
+  
+}
+
+a.back-button:link {
+  color: $red-brown;
+}
+a.back-button:visited {
+  color: $red-brown;
+}
+a.back-button:hover {
+  color: white;
+  background-color: $medium-gray;
 }
