--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -1,14 +1,34 @@
 @import "./colors.scss";
 
-.projects-list-show-container {
+.projects-list-container {
   display: flex;
   padding: 0.2rem;
   justify-content: center;
+  column-gap: 2rem;
+}
+
+.projects-index-container {
   max-height: 650px;
   overflow-y: scroll;
 }
 
-.project-tile-container {
+.projects-form-container {
+  align-self: center;
+  border-radius: 0.5rem;
+  background-color: $transparent-background;
+  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  margin: 1rem 0.5rem;
+  padding: 1rem;
+}
+
+.new-project-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-tile-container,
+.project-show {
   margin: 1em;
   padding: 1em;
   border-radius: 0.5rem;
@@ -17,7 +37,19 @@
   color: $red-brown;
 }
 
-.project-name {
+.project-tile-container:link {
+  color: $red-brown;
+}
+.project-tile-container:visited {
+  color: $red-brown;
+}
+.project-tile-container:hover {
+  color: white;
+  background-color: $dark-gray;
+}
+
+.project-name,
+.new-project-heading {
   font-weight: bold;
 }
 
@@ -43,7 +75,7 @@
 }
 
 .back-button {
-  background-color: $medium-beige;
+  background-color: none;
   border: 3px solid $red-brown;
   border-radius: 1rem;
   padding: 0.5rem;
@@ -61,5 +93,5 @@ a.back-button:visited {
 }
 a.back-button:hover {
   color: white;
-  background-color: $medium-gray;
+  background-color: $dark-gray;
 }
