--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -12,21 +12,6 @@
   overflow-y: scroll;
 }
 
-.projects-form-container {
-  align-self: center;
-  border-radius: 0.5rem;
-  background-color: $transparent-background;
-  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
-  margin: 1rem 0.5rem;
-  padding: 1rem;
-}
-
-.new-project-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .project-tile-container,
 .project-show {
   margin: 1em;
@@ -48,8 +33,7 @@
   background-color: $dark-gray;
 }
 
-.project-name,
-.new-project-heading {
+.project-name {
   font-weight: bold;
 }
 
