--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -7,6 +7,7 @@
 @import "../scss/stylesheets/weather.scss";
 @import "../scss/stylesheets/projects.scss";
 @import "../scss//stylesheets/projectForm.scss";
+@import "../scss/stylesheets/devInfoPage.scss";
 
 *,
 *::before,
