project show style update

--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -70,7 +70,7 @@
   color: $medium-beige;
   padding: 1rem 3rem;
   border-radius: 0.5rem;
-  width: max-content
+  width:fit-content;
 }
 
 .separator {
