--- a/client/src/assets/scss/stylesheets/colors.scss
+++ b/client/src/assets/scss/stylesheets/colors.scss
@@ -2,5 +2,6 @@ $medium-beige: rgb(255, 190, 141);
 $light-beige: rgb(255, 217, 187);
 $medium-gray: #746c60;
 $dark-gray: #1d1d1d;
+$dark-gray-transparent: rgba(29, 29, 29, 0.5);
 $red-brown: rgb(40, 21, 0);
-$transparent-background:rgba(255, 190, 141, 0.5);
+$transparent-background:rgba(255, 190, 141, 0.4);
