--- a/client/src/assets/scss/stylesheets/weather.scss
+++ b/client/src/assets/scss/stylesheets/weather.scss
@@ -5,7 +5,7 @@
   align-items: flex-end;
   max-width: 75%;
   margin: 1rem auto;
-  padding-top: 5rem;
+  padding-top: 1.5srem;
   color: rgb(120, 120, 120)
 }
 
