optimized active projects page for mobile

--- a/client/src/assets/scss/stylesheets/homePages.scss
+++ b/client/src/assets/scss/stylesheets/homePages.scss
@@ -14,8 +14,12 @@
 }
 
 .auth-page-container {
+  display: flex;
+  justify-content: center;
   text-align: center;
   padding: 1rem;
+  max-height: 85%;
+  overflow-y: scroll;
 }
 
 a:link {
