refactor to send userId in fetch body instead of params

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @import "../scss/stylesheets/topLinks.scss";
 @import "../scss/stylesheets/weather.scss";
 @import "../scss/stylesheets/projects.scss";
+@import "../scss/stylesheets/projectMetrics.scss";
 @import "../scss//stylesheets/projectForm.scss";
 @import "../scss/stylesheets/devInfoPage.scss";
 
