--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -30,6 +30,7 @@
   color: $red-brown;
 }
 .project-tile-container:hover {
+  cursor: pointer;
   color: white;
   background-color: $dark-gray-transparent;
 }
@@ -109,83 +110,4 @@ a.back-button:visited {
 a.back-button:hover {
   color: white;
   background-color: $dark-gray-transparent;
-}
-
-
-.woods-metrics-container {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  border: 2px solid rgb(154, 0, 0);
-  padding: 1rem;
-  margin-bottom: 2rem;
-  min-width: 90%;
-}
-
-.show-metrics-container {
-  border: 2px solid white;
-  padding: 2px;
-  width: 33%;
-  min-width:fit-content;
-}
-
-.add-woods-container {
-  border: 2px solid rgb(0, 138, 159);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 2px;
-  width: 33%;
-  min-width:fit-content;
-}
-
-#hardwood,
-#boardFeet {
-  border-radius: 0.5rem;
-  background-color: $dark-gray-transparent;
-  color: white;
-}
-
-#boardFeet {
-  width: 5rem;
-}
-
-.show-added-wood {
-  border: 2px solid rgb(23, 123, 0);
-  padding: 2px;
-  width: 33%;
-  min-width:fit-content;
-}
-
-.add-wood-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border: 2px solid rgb(16, 0, 96)
-}
-
-.add-wood-button {
-  background-color: none;
-  border: 3px solid $red-brown;
-  border-radius: 1rem;
-  padding: 0.5rem;
-  box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 50px;
-  max-width: fit-content;
-}
-
-a.add-wood-button:link {
-  color: $red-brown;
-}
-a.add-wood-button:visited {
-  color: $red-brown;
-}
-a.add-wood-button:hover {
-  color: white;
-  background-color: $dark-gray-transparent;
-}
-
-#hardwood-list {
-  background-color: $dark-gray-transparent;
-  border-radius: 0.5rem;
-  margin-bottom: 1rem;
 }
