basic hardwood index page is set up.  minor styling changes

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import "../scss/stylesheets/projectMetrics.scss";
 @import "../scss//stylesheets/projectForm.scss";
 @import "../scss/stylesheets/devInfoPage.scss";
+@import "../scss/stylesheets/hardwoodIndexPage.scss";
 
 *,
 *::before,
