styling updates, add wood post refactor

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -45,7 +45,7 @@ body {
 .sign-in-form {
   max-width: 40%;
   margin: 4rem auto;
-  background-color: $transparent-background;
+  background-color: $beige-transparent;
   border-radius: 0.5rem;
 }
 
