--- a/client/src/assets/scss/stylesheets/projectForm.scss
+++ b/client/src/assets/scss/stylesheets/projectForm.scss
@@ -1,7 +1,7 @@
 .projects-form-container {
   align-self: center;
   border-radius: 0.5rem;
-  background-color: $transparent-background;
+  background-color: $beige-transparent;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   margin: 1rem 0.5rem;
   padding: 1rem;
