--- a/client/src/assets/scss/stylesheets/topLinks.scss
+++ b/client/src/assets/scss/stylesheets/topLinks.scss
@@ -52,7 +52,7 @@
 
 .sign-out-button {
   color: $red-brown;
-  background-color: $transparent-background;
+  background-color: $beige-transparent;
   padding: 0.25rem;
   border-radius: 0.5rem;
 }
