--- a/client/src/assets/scss/stylesheets/colors.scss
+++ b/client/src/assets/scss/stylesheets/colors.scss
@@ -4,4 +4,4 @@ $medium-gray: #746c60;
 $dark-gray: #1d1d1d;
 $dark-gray-transparent: rgba(29, 29, 29, 0.5);
 $red-brown: rgb(40, 21, 0);
-$transparent-background:rgba(255, 190, 141, 0.7);
+$beige-transparent:rgba(255, 190, 141, 0.7);
