--- a/client/src/assets/scss/stylesheets/homePages.scss
+++ b/client/src/assets/scss/stylesheets/homePages.scss
@@ -8,7 +8,7 @@
   font-weight: bolder;
   text-align: center;
   padding: 1rem;
-  background-color: $transparent-background;
+  background-color: $beige-transparent;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   border-radius: 0.5rem;
 }
