--- a/client/src/assets/scss/stylesheets/projectMetrics.scss
+++ b/client/src/assets/scss/stylesheets/projectMetrics.scss
@@ -4,28 +4,28 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  // border: 2px solid rgb(154, 0, 0);
   padding: 1rem;
   margin-bottom: 2rem;
   min-width: 90%;
 }
 
 .show-metrics-container {
-  // border: 2px solid white;
   padding: 2px;
-  width: 20%;
-  min-width:fit-content;
+  min-width: 10%;
 }
 
 .add-woods-container {
-  // border: 2px solid rgb(0, 138, 159);
   display: flex;
   gap: 2rem;
   flex-wrap: wrap;
-  justify-content: center;
-  padding: 2px;
-  width: 70%;
-  min-width:fit-content;
+  justify-content: space-around;
+  align-items: center;
+  padding: 2rem;
+  min-width:70%;
+  background-color: $dark-gray-transparent;
+  border-radius: 0.5rem;
+  box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 50px;
+
 }
 
 #hardwood,
@@ -36,7 +36,6 @@
 }
 
 .show-added-wood {
-  // border: 2px solid rgb(23, 123, 0);
   padding: 2px;
   min-width:fit-content;
 }
@@ -46,7 +45,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // border: 2px solid rgb(16, 0, 96);
 }
 
 #boardFeet {
@@ -77,7 +75,7 @@
   background-color: $dark-gray-transparent;
 }
 
-.done-adding-button {
+.save-button {
   background-color: none;
   border: 3px solid $red-brown;
   border-radius: 1rem;
@@ -86,33 +84,13 @@
   max-width: fit-content;
 }
 
-.done-adding-button:link {
+.save-button:link {
   color: $red-brown;
 }
-.done-adding-button:visited {
+.save-button:visited {
   color: $red-brown;
 }
-.done-adding-button:hover {
-  cursor: pointer;
-  color: white;
-  background-color: $dark-gray-transparent;
-}
-
-.toggle-add-wood-button {
-  background-color: none;
-  border: 3px solid $red-brown;
-  border-radius: 1rem;
-  padding: 0.5rem;
-  box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 50px;
-}
-
-.toggle-add-wood-button:link {
-  color: $red-brown;
-}
-.toggle-add-wood-button:visited {
-  color: $red-brown;
-}
-.toggle-add-wood-button:hover {
+.save-button:hover {
   cursor: pointer;
   color: white;
   background-color: $dark-gray-transparent;
