added web scraping back and front ends, hover wood-info-tile for detail

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import "../scss//stylesheets/projectForm.scss";
 @import "../scss/stylesheets/devInfoPage.scss";
 @import "../scss/stylesheets/hardwoodIndexPage.scss";
+@import "../scss/stylesheets/popups.scss";
 
 *,
 *::before,
@@ -52,6 +53,3 @@ body {
 .footer-container {
   margin-top: 3rem;
 }
-
-
-
