--- a/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
+++ b/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
@@ -22,7 +22,7 @@ h4 {
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   padding: 0.25rem;
-  width:20%;
+  width: 180px;
   height: 15%;
   overflow-x: scroll;
 }
