changed hardwood index tile styling

--- a/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
+++ b/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
@@ -18,7 +18,7 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $dark-gray-transparent;
+  background-color: $medium-beige;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   padding: 0.25rem;
@@ -37,4 +37,5 @@ h4 {
   cursor: pointer;
   color: white;
   background-color: $dark-gray-transparent;
+
 }
