--- a/client/src/assets/scss/stylesheets/topLinks.scss
+++ b/client/src/assets/scss/stylesheets/topLinks.scss
@@ -3,7 +3,7 @@
 .top-links {
   color:$medium-beige;
   font-weight: bold;
-  background-color: $red-brown;
+  background-color: $dark-gray;
   display: flex;
   align-items: center;
   justify-content: space-between;
