--- a/client/src/assets/scss/stylesheets/projectForm.scss
+++ b/client/src/assets/scss/stylesheets/projectForm.scss
@@ -1,18 +1,65 @@
 .projects-form-container {
   align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   border-radius: 0.5rem;
-  background-color: $beige-transparent;
+  background-color: $dark-gray;
+  color: $medium-beige;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
-  margin: 1rem 0.5rem;
-  padding: 1rem;
+  padding: 1.5rem;
+  height: fit-content;
 }
 
 .new-project-form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: $medium-beige;
 }
 
-.new-project-heading {
+.start-new-project-heading {
   font-weight: bold;
+}
+
+.name,
+.description,
+.customer,
+.quantity {
+  color: $medium-beige;
+  font-size: 1.1rem;
+}
+
+#name,
+#description,
+#customer,
+#quantity,
+#project-form-submit {
+  border-radius: 0.5rem;
+  background-color: $red-brown;
+  color: $medium-beige;
+  border: 1px solid $medium-beige;
+  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+}
+
+#project-form-submit {
+  height: 50px;
+  width: 200px;
+  cursor: pointer;
+  color: $dark-gray;
+  background-color: $medium-beige;
+  font-weight: bolder;
+  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  margin: 1.5rem
+}
+
+#project-form-submit:link {
+  color: $red-brown;
+}
+#project-form-submit:visited {
+  color: $red-brown;
+}
+#project-form-submit:hover {
+  color: white;
+  background-color: $dark-gray-transparent;
 }
