--- a/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
+++ b/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
@@ -18,9 +18,10 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $medium-beige;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  background-color: $dark-gray;
+  color: $medium-beige;
   padding: 0.25rem;
   width: 180px;
   height: 15%;
