--- a/client/src/assets/scss/stylesheets/topLinks.scss
+++ b/client/src/assets/scss/stylesheets/topLinks.scss
@@ -27,6 +27,17 @@
   padding: 0.5rem
 } 
 
+  .link-item:link {
+    color: $medium-beige;
+  }
+  .link-item:visited {
+    color: $medium-beige;
+  }
+  .link-item:hover {
+    cursor: pointer;
+    color: white;
+  }
+
 .logged-in-links {
   display: flex;
 }
@@ -51,8 +62,21 @@
 }
 
 .sign-out-button {
-  color: $red-brown;
-  background-color: $beige-transparent;
-  padding: 0.25rem;
+  display: flex;
+  color: $medium-beige;
+  border: 2px solid $medium-beige;
+  padding: 0.25rem 1rem;
   border-radius: 0.5rem;
 }
+  .sign-out-button:link {
+    color: $medium-beige;
+  }
+  .sign-out-button:visited {
+    color: $medium-beige;
+  }
+  .sign-out-button:hover {
+    cursor: pointer;
+    color: $red-brown;
+    background-color: $beige-transparent;
+  }
+
