re-styled added-wood-tiles

--- a/client/src/assets/scss/stylesheets/projectMetrics.scss
+++ b/client/src/assets/scss/stylesheets/projectMetrics.scss
@@ -152,6 +152,12 @@
 }
 
 
+.h3-woods-needed {
+  color: $dark-gray;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
 .added-wood-tile-container {
   display: flex;
   justify-content: center;
