--- a/client/src/assets/scss/stylesheets/homePages.scss
+++ b/client/src/assets/scss/stylesheets/homePages.scss
@@ -14,10 +14,10 @@
 }
 
 .unauthenticated-home-page {
+  margin-top: 2rem;
   background-color: $dark-gray;
   box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 50px;
 }
-
 
 .auth-page-container {
   display: flex;
